--- a/Yara/Areas/Admin/Views/WareHouse/MyWareHouse.cshtml
+++ b/Yara/Areas/Admin/Views/WareHouse/MyWareHouse.cshtml
@@ -157,23 +157,7 @@
 
 @section Scripts
 {
-    <script>
-        function updateQRCode() {
-            $('.QRCodeImage').each(function () {
-                var code = $(this).siblings('.Code').text();
-                if (code) {
-                    $(this).attr('src', '@Url.Action("GenerateQRCode", "WareHouse")?text=' + encodeURIComponent(code));
-                } else {
-                    $(this).attr('src', '');
-                }
-            });
-        }
-    </script>
-    <script>
-        $(document).on('click', '.paginate_button', function () {
-            updateQRCode();
-        });
-    </script>
+    <script src="~/js/warehouse.js"></script>
 }
 
 
