--- a/Yara/Areas/Admin/Views/WareHouseBranch/MyWareHouseBranch.cshtml
+++ b/Yara/Areas/Admin/Views/WareHouseBranch/MyWareHouseBranch.cshtml
@@ -73,7 +73,7 @@
                                                         <td>
                                                             <div class="form-group">
                                                                 <div class="Code">@item.Code</div>
-                                                                <img class="QRCodeImage img-fluid" src="" alt="QR Code" data-url="@Url.Action("GenerateQRCode", "WareHouse")" />
+                                                                <img class="QRCodeImage img-fluid" src="" alt="QR Code" data-url="@Url.Action("GenerateQRCode", "WareHouseBranch")" />
                                                                 @* <img class="QRCodeImage img-fluid" src="" alt="QR Code" /> *@
 
                                                             </div>
@@ -162,23 +162,6 @@
 @section Scripts
 {
     <script src="~/js/warehouse-branch.js"></script>
-    @* <script>
-        function updateQRCode() {
-            $('.QRCodeImage').each(function () {
-                var code = $(this).siblings('.Code').text();
-                if (code) {
-                    $(this).attr('src', '@Url.Action("GenerateQRCode", "WareHouse")?text=' + encodeURIComponent(code));
-                } else {
-                    $(this).attr('src', '');
-                }
-            });
-        }
-    </script>
-    <script>
-        $(document).on('click', '.paginate_button', function () {
-            updateQRCode();
-        });
-    </script> *@
 }
 
 
