--- a/Yara/Areas/Admin/Views/CompanyInformation/AddEditCompanyInformation.cshtml
+++ b/Yara/Areas/Admin/Views/CompanyInformation/AddEditCompanyInformation.cshtml
@@ -152,7 +152,8 @@
 </div>
 
 @section Scripts {
-    <script>
+    <script src="~/js/merchant.js"></script>
+    @* <script>
         var loadFile = function (event) {
             var image = document.getElementById('output');
             image.src = URL.createObjectURL(event.target.files[0]);
@@ -160,5 +161,5 @@
     </script>
     <script>
         $("#url").val(window.location.href);
-    </script>
+    </script> *@
 }
