--- a/Yara/Areas/Admin/Views/ProductInformation/AddEditProductInformationImage.cshtml
+++ b/Yara/Areas/Admin/Views/ProductInformation/AddEditProductInformationImage.cshtml
@@ -199,10 +199,10 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 
-    <script src="~/js/custom-scripts.js"></script>
+    <script src="~/js/product-information.js"></script>
 
 
-    <script>
+    @* <script>
 
          function printWarehouseDetails() {
             var Category = $('#SelectCategory option:selected').text();
@@ -281,5 +281,5 @@
             });
         });
 
-    </script>
+    </script> *@
 }
