--- a/Yara/Areas/Admin/Views/Merchants/AddEditMerchantsImage.cshtml
+++ b/Yara/Areas/Admin/Views/Merchants/AddEditMerchantsImage.cshtml
@@ -159,7 +159,12 @@
 </div>
 
 @section Scripts {
-    <script>
+    <script src="~/Admin/assets/plugin/select2/js/select2.min.js"></script>
+    <script src="~/Admin/assets/plugin/multiselect/multiselect.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+    <script src="~/js/merchant-image.js"></script>
+    @* <script>
         var loadFile = function (event) {
             var image = document.getElementById('output');
             image.src = URL.createObjectURL(event.target.files[0]);
@@ -168,10 +173,6 @@
     <script>
         $("#url").val(window.location.href);
     </script>
-    <script src="~/Admin/assets/plugin/select2/js/select2.min.js"></script>
-    <script src="~/Admin/assets/plugin/multiselect/multiselect.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
     <script>
         $(document).ready(function () {
             $('.select2_1').select2({
@@ -242,5 +243,5 @@
                 }
             });
         });
-    </script>
+    </script> *@
 }
